# ezdb

./: .dockerignore  Cargo.toml  Dockerfile  README.md  justfile
client/: jest.config.js  justfile  package-lock.json  package.json
client/src/: bench.ts  client.test.ts  client.ts  hello.test.ts  utils.ts
client/tests/: rest.js
manual_tests/: package-lock.json  package.json
manual_tests/test/: rest.js
sample-data/: policy.json
src/: analyzer.rs  core.rs  lib.rs  persistence.rs  server.rs  tokens.rs
src/persistence/: inmemory.rs  sqlite.rs  timed.rs
