[package]
name = "ezdb"
version = "0.1.0"
authors = ["Ryan Brewster <ryanpbrewster@gmail.com>"]
edition = "2018"

[[bin]]
name = "ezdb-server"
path = "src/bin/ezdb-server.rs"

[profile.release]
panic = "abort"

[dependencies]
actix = "0.9"
actix-rt = "1.1"
actix-web = "2.0"
env_logger = "0.7"
log = "0.4"
rusqlite = {version = "0.23", features = ["bundled", "serde_json"]}
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
