[package]
name = "ezdb"
version = "0.1.0"
authors = ["Ryan Brewster <ryanpbrewster@gmail.com>"]
edition = "2018"

[[bin]]
name = "ezdb-server"
path = "src/bin/ezdb-server.rs"

[profile.release]
panic = "abort"

[dependencies]

actix = "0.10"
actix-rt = "1.1"
actix-web = "3.3"
actix-web-httpauth = "0.5"
crossbeam-channel = "0.5"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
rusqlite = {version = "0.24", features = ["bundled"]}
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"